--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+*.prefs
+e2e_test.*
+node_modules
+dist
+
+console-web/.classpath
+console-web/.project
+.project
