Selection of Modelica Component Implemented.

--- a/console-web/src/main/web/angular.json
+++ b/console-web/src/main/web/angular.json
@@ -25,17 +25,16 @@
             "assets": [
               "src/favicon.ico",
               "src/assets"
-              ],
+            ],
             "styles": [
-          "src/styles.scss",
-			   "node_modules/jointjs/css/layout.css",
-			   "node_modules/jointjs/css/themes/material.css",
-			   "node_modules/jointjs/css/themes/default.css"
+              "src/styles.scss",
+              "node_modules/jointjs/css/layout.css",
+              "node_modules/jointjs/css/themes/material.css",
+              "node_modules/jointjs/css/themes/default.css"
             ],
             "scripts": [
-			
-			  "node_modules/jquery/dist/jquery.min.js",
-			  "node_modules/underscore/underscore.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/underscore/underscore.js",
               "node_modules/backbone/backbone.js",
               "node_modules/lodash/index.js",
               "node_modules/jointjs/dist/joint.js"
@@ -146,5 +145,10 @@
       }
     }
   },
-  "defaultProject": "web-ui"
+  "defaultProject": "web-ui",
+  "schematics": {
+    "@schematics/angular:component": {
+      "spec": false
+    }
+  }
 }
