--- a/console-web/src/main/web/package.json
+++ b/console-web/src/main/web/package.json
@@ -22,14 +22,20 @@
     "@angular/platform-browser": "~7.2.10",
     "@angular/platform-browser-dynamic": "~7.2.10",
     "@angular/router": "~7.2.10",
-    "core-js": "^2.5.4",
-    "material-design-icons": "^3.0.1",
-    "rxjs": "~6.4.0",
-    "zone.js": "~0.8.29",
+    "apollo-angular": "^1.8.0",
+    "apollo-angular-link-http": "^1.9.0",
+    "apollo-cache-inmemory": "^1.6.0",
+    "apollo-client": "^2.6.0",
+    "apollo-link": "^1.2.11",
     "backbone": "^1.4.0",
+    "core-js": "^2.5.4",
+    "graphql": "^14.5.0",
+    "graphql-tag": "^2.10.0",
     "jointjs": "^2.2.1",
     "jquery": "^3.4.0",
-    "lodash": "^4.17.13"
+    "material-design-icons": "^3.0.1",
+    "rxjs": "~6.4.0",
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.6",
@@ -41,7 +47,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/jointjs": "^2.0.0",
     "@types/jquery": "^3.3.29",
-    "@types/lodash": "^3.10.1",
+    "@types/lodash": "^3.10.2",
     "@types/node": "~8.9.4",
     "backbone": "^1.4.0",
     "codelyzer": "~4.5.0",
@@ -55,7 +61,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "lodash": "^4.17.13",
+    "lodash": "^4.17.15",
     "npm": "^6.9.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
