--- a/console-web/src/main/web/package.json
+++ b/console-web/src/main/web/package.json
@@ -11,17 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.10",
+    "@angular-devkit/build-angular": "^0.803.21",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "^7.3.5",
-    "@angular/common": "~7.2.10",
-    "@angular/compiler": "~7.2.10",
-    "@angular/core": "~7.2.10",
-    "@angular/forms": "~7.2.10",
-    "@angular/http": "~7.2.10",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
     "@angular/material": "^7.3.5",
-    "@angular/platform-browser": "~7.2.10",
-    "@angular/platform-browser-dynamic": "~7.2.10",
-    "@angular/router": "~7.2.10",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
     "apollo-angular": "^1.8.0",
     "apollo-angular-link-http": "^1.9.0",
     "apollo-cache-inmemory": "^1.6.0",
@@ -33,16 +33,15 @@
     "graphql-tag": "^2.10.0",
     "jointjs": "^2.2.1",
     "jquery": "^3.4.0",
+    "lodash": "^4.17.15",
     "material-design-icons": "^3.0.1",
     "rxjs": "~6.4.0",
-    "lodash": "^4.17.15"
-    "zone.js": "~0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.6",
-    "@angular/cli": "~7.0.6",
-    "@angular/compiler-cli": "^7.2.10",
-    "@angular/language-service": "~7.2.10",
+    "@angular/cli": "^8.3.21",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "~8.2.14",
     "@types/backbone": "^1.3.47",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
@@ -50,23 +49,19 @@
     "@types/jquery": "^3.3.29",
     "@types/lodash": "^3.10.2",
     "@types/node": "~8.9.4",
-    "backbone": "^1.4.0",
     "codelyzer": "~4.5.0",
     "install": "^0.12.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "jointjs": "^2.2.1",
-    "jquery": "^3.4.0",
     "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "lodash": "^4.17.15",
     "npm": "^6.13.4",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "typescript": "~3.5.3"
   }
 }
